bug: Fix broken onClick event fixed

--- a/src/component/nav/nav-factory/_NavFactory.scss
+++ b/src/component/nav/nav-factory/_NavFactory.scss
@@ -1,5 +1,6 @@
 .navFactory {
   &.sticky {
     position: fixed;
+    z-index: 5;
   }
 }
