--- a/src/page/_Page.scss
+++ b/src/page/_Page.scss
@@ -1,5 +1,4 @@
 .page {
-  z-index: -1;
   width: 100%;
   height: 70vh;
 
